--- a/src/app/shared/overviews-shared/remote-card/remote-card.component.scss
+++ b/src/app/shared/overviews-shared/remote-card/remote-card.component.scss
@@ -60,8 +60,25 @@
     }
   }
 
-  &.inactive-remote {
-    border-color: rgba(var(--purple-rgb), 0.3);
+  &.moving {
+    animation: pulseOrange 2s infinite;
+    border-color: rgba(var(--orange-rgb), 0.2);
+    will-change: box-shadow;
+
+    .remote-info .icon-container {
+      background: rgba(var(--orange-rgb), 0.1);
+      border: 1px solid rgba(var(--orange-rgb), 0.2);
+
+      .remote-type-icon {
+        color: var(--orange);
+      }
+    }
+  }
+
+  &.bisyncing {
+    animation: pulsePurple 2s infinite;
+    border-color: rgba(var(--purple-rgb), 0.2);
+    will-change: box-shadow;
 
     .remote-info .icon-container {
       background: rgba(var(--purple-rgb), 0.1);
@@ -69,6 +86,19 @@
 
       .remote-type-icon {
         color: var(--purple);
+      }
+    }
+  }
+
+  &.inactive-remote {
+    border-color: rgba(var(--app-text-color-rgb), 0.3);
+
+    .remote-info .icon-container {
+      background: rgba(var(--app-text-color-rgb), 0.1);
+      border: 1px solid rgba(var(--app-text-color-rgb), 0.2);
+
+      .remote-type-icon {
+        color: rgba(var(--app-text-color-rgb), 0.5);
       }
     }
   }
@@ -185,6 +215,22 @@
         .status-icon {
           animation: breathing 2s ease-in-out infinite;
         }
+      }
+
+      &.moving {
+        background: rgba(var(--orange-rgb), 0.1);
+        color: var(--orange);
+        border: 1px solid rgba(var(--orange-rgb), 0.2);
+
+        .status-icon {
+          animation: breathing 2s ease-in-out infinite;
+        }
+      }
+
+      &.bisyncing {
+        background: rgba(var(--purple-rgb), 0.1);
+        color: var(--purple);
+        border: 1px solid rgba(var(--purple-rgb), 0.2);
       }
     }
   }
